[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/DialogueCompiler.gd" type="Script" id=1]
[ext_resource path="res://Scripts/DialogueInterpreter.gd" type="Script" id=2]

[node name="DialoguePlaceholder" type="Node"]

[node name="Node" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 544.0
margin_top = 45.0
margin_right = 951.0
margin_bottom = 415.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="VBoxContainer" parent="Panel/VB"]
margin_right = 377.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/VB/D"]
margin_right = 377.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Narr" type="Label" parent="Panel/VB/D"]
margin_top = 81.0
margin_right = 377.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Convo" type="Label" parent="Panel/VB/D"]
margin_top = 162.0
margin_right = 377.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="VBoxContainer" parent="Panel/VB"]
margin_top = 244.0
margin_right = 377.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="C1" type="Button" parent="Panel/VB/C"]
visible = false
margin_right = 377.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C2" type="Button" parent="Panel/VB/C"]
visible = false
margin_right = 377.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C3" type="Button" parent="Panel/VB/C"]
visible = false
margin_right = 377.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C4" type="Button" parent="Panel/VB/C"]
visible = false
margin_right = 377.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 497.0
margin_bottom = 220.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices_btn" type="Button" parent="."]
margin_left = 400.0
margin_top = 250.0
margin_right = 479.0
margin_bottom = 270.0
text = "Load Demo 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conclusion_btn" type="Button" parent="."]
margin_left = 400.0
margin_top = 300.0
margin_right = 479.0
margin_bottom = 320.0
text = "Load Demo 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conditions_btn" type="Button" parent="."]
margin_left = 400.0
margin_top = 350.0
margin_right = 479.0
margin_bottom = 320.0
text = "Load Demo 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 305.0
margin_top = 45.0
margin_right = 532.0
margin_bottom = 122.0
text = "Click on panel to progress dialogue 
if no buttons are being shown.

Start -> init script
Load -> read & load dialogue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Panel" to="Panel" method="_on_Panel_gui_input"]
[connection signal="pressed" from="Panel/VB/C/C1" to="Panel" method="_on_C1_pressed"]
[connection signal="pressed" from="Panel/VB/C/C2" to="Panel" method="_on_C2_pressed"]
[connection signal="pressed" from="Panel/VB/C/C3" to="Panel" method="_on_C3_pressed"]
[connection signal="pressed" from="Panel/VB/C/C4" to="Panel" method="_on_C4_pressed"]
[connection signal="pressed" from="Load" to="Node" method="_on_Load_pressed"]
[connection signal="pressed" from="Choices_btn" to="Node" method="_on_Choices_btn_pressed"]
[connection signal="pressed" from="Conclusion_btn" to="Node" method="_on_Conclusion_btn_pressed"]
[connection signal="pressed" from="Conditions_btn" to="Node" method="_on_Conditions_btn_pressed"]
